# DotFileManager

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  configure.ac
DotFileManager/: CHANGELOG.md  CMakeLists.txt
DotFileManager/man/: CMakeLists.txt
DotFileManager/src/: CMakeLists.txt  main.cc
DotFileManagerCommon/src/: CMakeLists.txt  config.h.in  configfilereader.cc  configfilereader.h  dependencyaction.cc  dependencyaction.h  filecheckaction.cc  filecheckaction.h  installaction.cc  installaction.h  messageaction.cc  messageaction.h  module.cc  module.h  moduleaction.cc  moduleaction.h  modulefile.cc  modulefile.h  options.h  readerenvironment.h  removeaction.cc  removeaction.h  shellaction.cc  shellaction.h  util.h
GraphicalDotFileManager/: CMakeLists.txt
GraphicalDotFileManager/src/: CMakeLists.txt  configfilewriter.cc  configfilewriter.h  createmoduledialog.cc  createmoduledialog.h  dependencyaction.cc  dependencyaction.h  dependencyeditor.cc  dependencyeditor.h  filecheckaction.cc  filecheckaction.h  filecheckeditor.cc  filecheckeditor.h  gdfmwindow.cc  gdfmwindow.h  installaction.cc  installaction.h  installactioneditor.cc  installactioneditor.h  main.cc  messageaction.cc  messageaction.h  messageeditor.cc  messageeditor.h  module.cc  module.h  moduleaction.cc  moduleaction.h  moduleactioneditor.cc  moduleactioneditor.h  modulefile.cc  modulefile.h  modulefileeditor.cc  modulefileeditor.h  removeaction.cc  removeaction.h  removeactioneditor.cc  removeactioneditor.h  shellaction.cc  shellaction.h  (+3 more)
man/: dfm.1
src/: CMakeLists.txt  Makefile.am  abstractwindow.h  abstractwindow.hh  command.cc  command.h  command.hh  configfilereader.cc  configfilereader.h  configfilereader.hh  configfilewriter.cc  configfilewriter.h  configfilewriter.hh  createmoduledialog.cc  createmoduledialog.h  createmoduledialog.hh  dependencyaction.cc  dependencyaction.h  dependencyaction.hh  dependencyeditor.cc  dependencyeditor.hh  dfm.cc  dotfilemanager.cc  dotfilemanager.h  dotfilemanager.hh  filecheck.cc  filecheck.h  filecheckaction.cc  filecheckaction.h  filecheckaction.hh  filecheckeditor.cc  filecheckeditor.h  filecheckeditor.hh  filemodulecomponent.cc  filemodulecomponent.h  gdfm.cc  gdfmwindow.cc  gdfmwindow.h  gdfmwindow.hh  installaction.cc  (+59 more)
